positive_vi/vi/CommandParser.py
# Generated from CommandParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CommandParser ( Parser ):

    grammarFileName = "CommandParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'\\u0001'", "'\\u0002'", 
                     "'\\u0003'", "'\\u0004'", "'\\u0005'", "'\\u0006'", 
                     "'\\u0007'", "'\\u0008'", "'\\u0009'", "<INVALID>", 
                     "'\\u000B'", "'\\u000C'", "'\\r'", "'\\u000E'", "'\\u000F'", 
                     "'\\u0010'", "'\\u0011'", "'\\u0012'", "'\\u0013'", 
                     "'\\u0014'", "'\\u0015'", "'\\u0016'", "'\\u0017'", 
                     "'\\u0018'", "'\\u0019'", "'\\u001A'", "'\\u001B'", 
                     "'\\u001C'", "'\\u001D'", "'\\u001E'", "'\\u001F'", 
                     "'A'", "'B'", "'C'", "'D'", "'E'", "'F'", "'G'", "'H'", 
                     "'I'", "'J'", "'K'", "'L'", "'M'", "'N'", "'O'", "'P'", 
                     "'Q'", "'R'", "'S'", "'T'", "'U'", "'V'", "'W'", "'X'", 
                     "'Y'", "'Z'", "'a'", "'b'", "'c'", "'d'", "'e'", "'f'", 
                     "'g'", "'h'", "'i'", "'j'", "'k'", "'l'", "'m'", "'n'", 
                     "'o'", "'p'", "'q'", "'r'", "'s'", "'t'", "'u'", "'v'", 
                     "'w'", "'x'", "'y'", "<INVALID>", "'\\'", "<INVALID>", 
                     "'0'", "';'", "'.'", "'~'", "<INVALID>", "'|'", "'_'", 
                     "'^'", "<INVALID>", "'-'", "<INVALID>", "<INVALID>", 
                     "'$'", "'%'", "'[['", "']]'", "<INVALID>", "<INVALID>", 
                     "'`'", "','", "<INVALID>", "':'", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'UNNAMED'", 
                     "<INVALID>", "<INVALID>", "'echo'", "'visType'", "'subOpt'", 
                     "'winType'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'map'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\\u02DC'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'wq'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@'", "'*'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'no'", "'all'", 
                     "'LHS'", "'RHS'" ]

    symbolicNames = [ "<INVALID>", "Count", "ControlA", "ControlB", "ControlC", 
                      "ControlD", "ControlE", "ControlF", "ControlG", "ControlH", 
                      "ControlI", "ControlJ", "ControlK", "ControlL", "ControlM", 
                      "ControlN", "ControlO", "ControlP", "ControlQ", "ControlR", 
                      "ControlS", "ControlT", "ControlU", "ControlV", "ControlW", 
                      "ControlX", "ControlY", "ControlZ", "ControlLBrack", 
                      "ControlBSlash", "ControlRBrack", "ControlPow", "ControlLow", 
                      "UpperA", "UpperB", "UpperC", "UpperD", "UpperE", 
                      "UpperF", "UpperG", "UpperH", "UpperI", "UpperJ", 
                      "UpperK", "UpperL", "UpperM", "UpperN", "UpperO", 
                      "UpperP", "UpperQ", "UpperR", "UpperS", "UpperT", 
                      "UpperU", "UpperV", "UpperW", "UpperX", "UpperY", 
                      "UpperZ", "LowerA", "LowerB", "LowerC", "LowerD", 
                      "LowerE", "LowerF", "LowerG", "LowerH", "LowerI", 
                      "LowerJ", "LowerK", "LowerL", "LowerM", "LowerN", 
                      "LowerO", "LowerP", "LowerQ", "LowerR", "LowerS", 
                      "LowerT", "LowerU", "LowerV", "LowerW", "LowerX", 
                      "LowerY", "LowerZ", "BSlash", "Slash", "Zero", "Semi", 
                      "Dot", "Tilde", "Equal", "Vert", "Low", "Pow", "Plus", 
                      "Minus", "LShift", "RShift", "Dollar", "Percent", 
                      "DLBrack", "DRBrack", "Amp", "Apos", "Grave", "Comma", 
                      "Excl", "Colon", "Quest", "Space", "LParen", "RParen", 
                      "LBrace", "RBrace", "Adr1", "Adr2", "PlusSym", "CountCmd", 
                      "Flags", "UnnamedBuffer", "SimpleFilename", "StringFilename", 
                      "ShellCommand", "VisType", "SubOptions", "WindowTypes", 
                      "SlashSym", "ExclSym", "QuestSym", "AbbreviateSym", 
                      "AppendSym", "ArgsSym", "ChangeSym", "ChangeDirSym", 
                      "CopySym", "DeleteSym", "EditSym", "FileSym", "InsertSym", 
                      "JoinSym", "ListSym", "MapSym", "MarkSym", "MoveSym", 
                      "NextSym", "NumberSym", "OpenSym", "PreserveSym", 
                      "PrintSym", "PutSym", "PrevSym", "QuitSym", "ReadSym", 
                      "RecoverSym", "RewindSym", "SetSym", "ShellSym", "SourceSym", 
                      "SubstituteSym", "SubAndSym", "SubTildeSym", "SuspendSym", 
                      "TagSym", "UnabbreviateSym", "UndoSym", "UnmapSym", 
                      "VersionSym", "VisualSym", "WriteSym", "WriteQuitSym", 
                      "WriteExitSym", "GlobalSym", "YankSym", "WindowSym", 
                      "LShiftSym", "RShiftSym", "EqualSym", "AtExecuteSym", 
                      "AtTimesSym", "ColonEnd", "QuestOpt", "EqualOpt", 
                      "CountOpt", "SetNoSym", "SetAllSym", "LHS", "RHS", 
                      "ExOption", "WsOpt", "ColonOptEnd", "SetOptEnd", "SimpleFileName" ]

    RULE_start = 0
    RULE_adr1 = 1
    RULE_adr2 = 2
    RULE_count = 3
    RULE_countCmd = 4
    RULE_buffer = 5
    RULE_filename = 6
    RULE_directory = 7
    RULE_shellCommand = 8
    RULE_visType = 9
    RULE_subOptions = 10
    RULE_windowTypes = 11
    RULE_character = 12
    RULE_letter = 13
    RULE_tagString = 14
    RULE_value = 15
    RULE_pattern = 16
    RULE_replacement = 17
    RULE_newline = 18
    RULE_flags = 19
    RULE_lhs = 20
    RULE_rhs = 21
    RULE_rePattern = 22
    RULE_rePattRepl = 23
    RULE_setOptions = 24
    RULE_setOption = 25
    RULE_exCommand = 26
    RULE_viMotion = 27
    RULE_viCommand = 28
    RULE_inCommand = 29
    RULE_exMoreCommand = 30
    RULE_viMoreCommand = 31

    ruleNames =  [ "start", "adr1", "adr2", "count", "countCmd", "buffer", 
                   "filename", "directory", "shellCommand", "visType", "subOptions", 
                   "windowTypes", "character", "letter", "tagString", "value", 
                   "pattern", "replacement", "newline", "flags", "lhs", 
                   "rhs", "rePattern", "rePattRepl", "setOptions", "setOption", 
                   "exCommand", "viMotion", "viCommand", "inCommand", "exMoreCommand", 
                   "viMoreCommand" ]

    EOF = Token.EOF
    Count=1
    ControlA=2
    ControlB=3
    ControlC=4
    ControlD=5
    ControlE=6
    ControlF=7
    ControlG=8
    ControlH=9
    ControlI=10
    ControlJ=11
    ControlK=12
    ControlL=13
    ControlM=14
    ControlN=15
    ControlO=16
    ControlP=17
    ControlQ=18
    ControlR=19
    ControlS=20
    ControlT=21
    ControlU=22
    ControlV=23
    ControlW=24
    ControlX=25
    ControlY=26
    ControlZ=27
    ControlLBrack=28
    ControlBSlash=29
    ControlRBrack=30
    ControlPow=31
    ControlLow=32
    UpperA=33
    UpperB=34
    UpperC=35
    UpperD=36
    UpperE=37
    UpperF=38
    UpperG=39
    UpperH=40
    UpperI=41
    UpperJ=42
    UpperK=43
    UpperL=44
    UpperM=45
    UpperN=46
    UpperO=47
    UpperP=48
    UpperQ=49
    UpperR=50
    UpperS=51
    UpperT=52
    UpperU=53
    UpperV=54
    UpperW=55
    UpperX=56
    UpperY=57
    UpperZ=58
    LowerA=59
    LowerB=60
    LowerC=61
    LowerD=62
    LowerE=63
    LowerF=64
    LowerG=65
    LowerH=66
    LowerI=67
    LowerJ=68
    LowerK=69
    LowerL=70
    LowerM=71
    LowerN=72
    LowerO=73
    LowerP=74
    LowerQ=75
    LowerR=76
    LowerS=77
    LowerT=78
    LowerU=79
    LowerV=80
    LowerW=81
    LowerX=82
    LowerY=83
    LowerZ=84
    BSlash=85
    Slash=86
    Zero=87
    Semi=88
    Dot=89
    Tilde=90
    Equal=91
    Vert=92
    Low=93
    Pow=94
    Plus=95
    Minus=96
    LShift=97
    RShift=98
    Dollar=99
    Percent=100
    DLBrack=101
    DRBrack=102
    Amp=103
    Apos=104
    Grave=105
    Comma=106
    Excl=107
    Colon=108
    Quest=109
    Space=110
    LParen=111
    RParen=112
    LBrace=113
    RBrace=114
    Adr1=115
    Adr2=116
    PlusSym=117
    CountCmd=118
    Flags=119
    UnnamedBuffer=120
    SimpleFilename=121
    StringFilename=122
    ShellCommand=123
    VisType=124
    SubOptions=125
    WindowTypes=126
    SlashSym=127
    ExclSym=128
    QuestSym=129
    AbbreviateSym=130
    AppendSym=131
    ArgsSym=132
    ChangeSym=133
    ChangeDirSym=134
    CopySym=135
    DeleteSym=136
    EditSym=137
    FileSym=138
    InsertSym=139
    JoinSym=140
    ListSym=141
    MapSym=142
    MarkSym=143
    MoveSym=144
    NextSym=145
    NumberSym=146
    OpenSym=147
    PreserveSym=148
    PrintSym=149
    PutSym=150
    PrevSym=151
    QuitSym=152
    ReadSym=153
    RecoverSym=154
    RewindSym=155
    SetSym=156
    ShellSym=157
    SourceSym=158
    SubstituteSym=159
    SubAndSym=160
    SubTildeSym=161
    SuspendSym=162
    TagSym=163
    UnabbreviateSym=164
    UndoSym=165
    UnmapSym=166
    VersionSym=167
    VisualSym=168
    WriteSym=169
    WriteQuitSym=170
    WriteExitSym=171
    GlobalSym=172
    YankSym=173
    WindowSym=174
    LShiftSym=175
    RShiftSym=176
    EqualSym=177
    AtExecuteSym=178
    AtTimesSym=179
    ColonEnd=180
    QuestOpt=181
    EqualOpt=182
    CountOpt=183
    SetNoSym=184
    SetAllSym=185
    LHS=186
    RHS=187
    ExOption=188
    WsOpt=189
    ColonOptEnd=190
    SetOptEnd=191
    SimpleFileName=192

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def viCommand(self):
            return self.getTypedRuleContext(CommandParser.ViCommandContext,0)


        def EOF(self):
            return self.getToken(CommandParser.EOF, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = CommandParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.viCommand()
            self.state = 65
            self.match(CommandParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Adr1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Adr1(self):
            return self.getToken(CommandParser.Adr1, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_adr1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdr1" ):
                return visitor.visitAdr1(self)
            else:
                return visitor.visitChildren(self)




    def adr1(self):

        localctx = CommandParser.Adr1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_adr1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(CommandParser.Adr1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Adr2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Adr2(self):
            return self.getToken(CommandParser.Adr2, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_adr2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdr2" ):
                return visitor.visitAdr2(self)
            else:
                return visitor.visitChildren(self)




    def adr2(self):

        localctx = CommandParser.Adr2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_adr2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(CommandParser.Adr2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CountContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Count(self):
            return self.getToken(CommandParser.Count, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_count

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCount" ):
                return visitor.visitCount(self)
            else:
                return visitor.visitChildren(self)




    def count(self):

        localctx = CommandParser.CountContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_count)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(CommandParser.Count)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CountCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CountCmd(self):
            return self.getToken(CommandParser.CountCmd, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_countCmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCountCmd" ):
                return visitor.visitCountCmd(self)
            else:
                return visitor.visitChildren(self)




    def countCmd(self):

        localctx = CommandParser.CountCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_countCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(CommandParser.CountCmd)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BufferContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UnnamedBuffer(self):
            return self.getToken(CommandParser.UnnamedBuffer, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_buffer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBuffer" ):
                return visitor.visitBuffer(self)
            else:
                return visitor.visitChildren(self)




    def buffer_(self):

        localctx = CommandParser.BufferContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_buffer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(CommandParser.UnnamedBuffer)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SimpleFileName(self):
            return self.getToken(CommandParser.SimpleFileName, 0)

        def StringFilename(self):
            return self.getToken(CommandParser.StringFilename, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_filename

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilename" ):
                return visitor.visitFilename(self)
            else:
                return visitor.visitChildren(self)




    def filename(self):

        localctx = CommandParser.FilenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_filename)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not(_la==122 or _la==192):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectoryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filename(self):
            return self.getTypedRuleContext(CommandParser.FilenameContext,0)


        def getRuleIndex(self):
            return CommandParser.RULE_directory

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirectory" ):
                return visitor.visitDirectory(self)
            else:
                return visitor.visitChildren(self)




    def directory(self):

        localctx = CommandParser.DirectoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_directory)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.filename()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShellCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ShellCommand(self):
            return self.getToken(CommandParser.ShellCommand, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_shellCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShellCommand" ):
                return visitor.visitShellCommand(self)
            else:
                return visitor.visitChildren(self)




    def shellCommand(self):

        localctx = CommandParser.ShellCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_shellCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(CommandParser.ShellCommand)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VisTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VisType(self):
            return self.getToken(CommandParser.VisType, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_visType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVisType" ):
                return visitor.visitVisType(self)
            else:
                return visitor.visitChildren(self)




    def visType(self):
